--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,16 @@ code {
 .search{
   padding: 15px;
 }
+
+.wrapperAbout{
+  background-color: #d1c4e9;
+  color: black;
+  border-radius: 40px;
+  height: 250px;
+  box-shadow: 4px 4px 8px 0 rgba(34, 60, 80, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
