--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ code {
 
 .cardImage{
   height: 500px;
+  width: 800px;
 }
 
 .content{
@@ -32,10 +33,10 @@ code {
 
 .wrapperAdd{
   display: block;
-  border: 1px solid #000;
   border-radius: 5%;
   padding: 30px;
   margin-top: 4cm;
+  box-shadow: 0px 0px 10px 2px rgba(34, 60, 80, 0.3);
   justify-content: center;
 }
 
@@ -44,8 +45,11 @@ code {
 }
 
 .wrapperRecipe{
-  box-shadow: 4px 4px 8px 0 rgba(34, 60, 80, 0.2);
+  box-shadow: 0px 0px 10px 2px rgba(34, 60, 80, 0.3);
   padding: 10px;
+  border-radius: 25px;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .search{
@@ -62,5 +66,14 @@ code {
   justify-content: center;
   align-items: center;
   margin-top: 50px;
+}
+
+.deleteButton{
+  width: 50%;
+  color: white;
+  background-color: red;
+  height: 40px;
+  border-radius: 30px;
+  border: 0px 
 }
 
